tests/errors/002-parsing/004-expected-end-of-tuple/003-code-blocks/001-unterminated-calls.xxx
// @TODO Improve the error message around this.
x := () => { x( }
